# EmberGraph

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  bench-with-neo4j.sh  bench-with-sqlite.sh  build.rs  ldbc_sn_interactive_sf01.db  simple_test_data_graph.db
data/ldbc-sn-interactive-sf01/nodes/: comment_0_0.csv  forum_0_0.csv  person_0_0.csv  post_0_0.csv
data/ldbc-sn-interactive-sf01/relationships/: forum_hasMember_person_0_0.csv  person_knows_person_0_0.csv  person_likes_comment_0_0.csv  person_likes_post_0_0.csv  person_studyAt_organisation_0_0.csv
ember-graph-bench-dump/: csv_dumper.py  data_fetcher.py  main.py  path_utils.py  pyproject.toml  schema_def.py
ember-graph-bench-dumper/: data_fetcher.py  main.py  pyproject.toml
ember-graph-import/: advanced_statistics_generator.py  main.py  neo4j_admin_import.py  path_utils.py  pyproject.toml  raw_data_formatter.py  schema.py  sqlite_entity.py  sqlite_import.py  statistics_generator.py
examples/: bi_1.rs  bi_10.rs  bi_11.rs  bi_11_neo4j_matching_ordered.rs  bi_12.rs  bi_13.rs  bi_14.rs  bi_15.rs  bi_16.rs  bi_17.rs  bi_17_neo4j_matching_ordered.rs  bi_18.rs  bi_19.rs  bi_2.rs  bi_20.rs  bi_3.rs  bi_3_neo4j_matching_ordered.rs  bi_4.rs  bi_5.rs  bi_5_neo4j_matching_ordered.rs  bi_6.rs  bi_6_neo4j_matching_ordered.rs  bi_7.rs  bi_7_neo4j_matching_ordered.rs  bi_8.rs  bi_9.rs
resources/cypher/: bi-1.cypher  bi-10.cypher  bi-11.cypher  bi-12.cypher  bi-13.cypher  bi-14.cypher  bi-15.cypher  bi-16.cypher  bi-17.cypher  bi-18.cypher  bi-19.cypher  bi-2.cypher  bi-20.cypher  bi-3.cypher  bi-4.cypher  bi-5.cypher  bi-6.cypher  bi-7.cypher  bi-8.cypher  bi-9.cypher
resources/plan/: forest.json  ldbc-bi-1.json  ldbc-bi-10.json  ldbc-bi-11.json  ldbc-bi-12.json  ldbc-bi-13.json  ldbc-bi-14.json  ldbc-bi-15.json  ldbc-bi-16.json  ldbc-bi-17.json  ldbc-bi-18.json  ldbc-bi-19.json  ldbc-bi-2.json  ldbc-bi-20.json  ldbc-bi-3.json  ldbc-bi-4.json  ldbc-bi-5.json  ldbc-bi-6.json  ldbc-bi-7.json  ldbc-bi-8.json  ldbc-bi-9.json  ldbc-ic-1-single-directed-knows.json  ldbc-ic-11-single-directed-knows.json  ldbc-ic-12-single-directed-knows.json  ldbc-ic-4-single-directed-knows.json  ldbc-ic-5-single-directed-knows.json  ldbc-ic-6-single-directed-knows.json  ldbc-is-1.json  ldbc-is-3-double-directed-knows.json  ldbc-is-3-reversed-directed-knows.json  ldbc-is-3-single-directed-knows.json  line.json  triangle.json
resources/plan/neo4j_ordered/: ldbc-bi-11.json  ldbc-bi-17.json  ldbc-bi-3.json  ldbc-bi-5.json  ldbc-bi-6.json  ldbc-bi-7.json
resources/plan/old/: forest.json  ldbc-bi-10.json  ldbc-bi-11.json  ldbc-bi-12.json  ldbc-bi-13.json  ldbc-bi-14.json  ldbc-bi-17.json  ldbc-bi-4.json  ldbc-bi-5.json  ldbc-bi-8.json  ldbc-bi-9.json  ldbc-ic-1-single-directed-knows.json  ldbc-ic-12-single-directed-knows.json  ldbc-ic-4-single-directed-knows.json  ldbc-ic-5-single-directed-knows.json  ldbc-ic-6-single-directed-knows.json  ldbc-is-1.json  ldbc-is-3-single-directed-knows.json  line.json
resources/plan/unoptimized/: forest.json  ldbc-bi-1.json  ldbc-bi-10.json  ldbc-bi-11.json  ldbc-bi-12.json  ldbc-bi-13.json  ldbc-bi-14.json  ldbc-bi-15.json  ldbc-bi-16.json  ldbc-bi-17.json  ldbc-bi-18.json  ldbc-bi-19.json  ldbc-bi-2.json  ldbc-bi-20.json  ldbc-bi-3.json  ldbc-bi-4.json  ldbc-bi-5.json  ldbc-bi-6.json  ldbc-bi-7.json  ldbc-bi-8.json  ldbc-bi-9.json  ldbc-ic-1-single-directed-knows.json  ldbc-ic-11-single-directed-knows.json  ldbc-ic-12-single-directed-knows.json  ldbc-ic-4-single-directed-knows.json  ldbc-ic-5-single-directed-knows.json  ldbc-ic-6-single-directed-knows.json  ldbc-is-1.json  ldbc-is-3-double-directed-knows.json  ldbc-is-3-reversed-directed-knows.json  ldbc-is-3-single-directed-knows.json  line.json  triangle.json
resources/plan/unoptimized/neo4j_ordered/: ldbc-bi-11.json  ldbc-bi-17.json  ldbc-bi-3.json  ldbc-bi-5.json  ldbc-bi-6.json  ldbc-bi-7.json
resources/queries/: ldbc-bi-1.txt  ldbc-bi-11.txt  ldbc-bi-12.txt  ldbc-bi-13.txt  ldbc-bi-15.txt  ldbc-bi-16.txt  ldbc-bi-17.txt  ldbc-bi-18.txt  ldbc-bi-19.txt  ldbc-bi-20.txt  ldbc-bi-4.txt  ldbc-bi-7.txt  ldbc-bi-8.txt  ldbc-bi-9.txt
resources/statistics/: advanced_statistics.json  label_statistics.json
src/: lib.rs  main.rs
src/demos/: bi_sf01.rs  bi_sf01_neo4j_ordered.rs  complex_interactive_sf01.rs  complex_sf01.rs  mod.rs  simple_interactive_sf01.rs  sqlite_test_only_db_builder.rs  test_only.rs
src/executor/: mod.rs
src/executor/instr_ops/: foreach.rs  get_adj.rs  init.rs  intersect.rs  mod.rs  report.rs
src/matching_ctx/: buckets.rs  buckets_impl.rs  mod.rs
src/matching_ctx/buckets_impl/: a_bucket_impl.rs  c_bucket_impl.rs  f_bucket_impl.rs  t_bucket_impl.rs
src/parser/: mod.rs
src/planner/: advanced_order_calc.rs  mod.rs  order_calc.rs  plan_dump.rs  plan_gen.rs  plan_opt.rs
src/result_dump/: mod.rs
src/schemas/: attr.rs  base.rs  entities.rs  instruction.rs  mod.rs  serde.rs
src/storage/: cached.rs  mod.rs  neo4j.rs  sqlite.rs
src/utils/: apriori.rs  dyn_graph.rs  expand_graph.rs  kv_pair.rs  mod.rs  parallel.rs  pretty_dump.rs  simd_utils.rs
tests/: colored_string.rs  futures_with_tokio.rs  hashmap_indexer.rs  iter.rs  num_cpus.rs  tqdm_async.rs
