[package]
name = "ember-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dotenv = "0.15.0"
futures = "0.3.31"
hashbrown = { version = "0.15.2", features = ["rayon", "serde"] }
itertools = "0.14.0"
mimalloc = "0.1.46"
moka = { version = "0.12.10", features = ["future"] }
neo4rs = "0.8.0"
num_cpus = "1.16.0"
ordered-float = "5.0.0"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
polars = { version = "0.46.0", features = [
    "lazy",
    "object",
    "performant",
    "serde",
] }
project-root = "0.2.2"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tikv-jemallocator = { version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-appender = "0.2.3"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = [
    "block_spawn_via_rayon",
    # "validate_pattern_uniqueness_before_final_merge",
    # "use_tracing",
    # "trace_all",
    # "unique_the_final_result",
]

block_spawn_via_rayon = []
use_tracing = []
validate_pattern_uniqueness_before_final_merge = []
unique_the_final_result = []

trace_all = ["trace_init", "trace_get_adj"]
trace_init = []
trace_get_adj = []
