[project]
name = "ember-graph-import"
version = "0.1.0"
description = "Data importer of `ember-graph`, will generate statistics data for plan-optimization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "colorama>=0.4.6",
    "numpy>=2.3.0",
    "polars>=1.30.0",
    "sqlmodel>=0.0.24",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.3",
    "mplfonts>=0.0.10",
    "scienceplots>=2.1.1",
]
